# ncpi-dataset-catalog

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  PRD-conversation-routing.md  README.md  cc-dev-ncpi-catalog-deploy.sh  cc-ncpi-catalog-dev-deploy.sh  cc-prod-ncpi-catalog-deploy.sh  cgl-ncpi-catalog-prod-deploy.sh  eslint.config.mjs  next-sitemap.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  release-please-config.json  tsconfig.json  tsconfig.typecheck.json
.claude/: settings.json
.husky/: post-commit  pre-commit
analytics/: constants.py  generate_sheets_report.ipynb  generate_static_site.py  readme.md  requirements.txt
backend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/concept_search/: CONVERSATION_PROMPT.md  EXTRACT_PROMPT.md  RESOLVE_PROMPT.md  ROUTER_PROMPT.md  ROUTER_SPIKE_PROMPT.md  STRUCTURE_PROMPT.md  __init__.py  api.py  api_models.py  build_focus_categories.py  cache.py  cli.py  consent_codes.json  consent_logic.py  conversation_agent.py  demographic_mappings.json  embeddings.py  eval_agent_conversation.py  eval_agent_decision.py  eval_extract.py  eval_mentions.py  eval_pipeline.py  eval_resolve.py  eval_router.py  eval_router_comparison.py  eval_structure.py  extract_agent.py  focus_categories.json  focus_isa.json  index.py  mention_constraints.py  models.py  pipeline.py  rate_limit.py  resolve_agent.py  response_summary.py  router_agent.py  router_spike.py  search_execution.py  session_store.py  (+2 more)
backend/generate_embeddings/: generate_embeddings.py  pyproject.toml
backend/mcp_catalog/: __init__.py  __main__.py  server.py
backend/tests/: conftest.py  test_api_agent.py  test_cache.py  test_consent_logic.py  test_consent_scope.py  test_conversation_agent.py  test_dynamodb_session_store.py  test_embeddings.py  test_facet_cardinality.py  test_focus_isa.py  test_index.py  test_mcp_server.py  test_pipeline.py  test_prompt_files_are_loaded.py  test_rate_limit.py  test_resolve_cache.py  test_response_summary.py  test_router.py  test_search_execution.py  test_session_store.py
catalog-build/: PLAN-all-dbgap-studies.md  build-all-dbgap-studies.ts  build-fhir-studies.ts  build-ncpi-catalog.ts  build-plaftorms.ts  build-platform-studies.ts  build-variable-summary.test.ts  build-variable-summary.ts  constants.ts  download-dbgap-variables.ts  entities.ts  fetch-dbgap-publications.ts  fetch-dbgap-selected-publications.ts  fetch-grant-publications.ts  fetch-pmc-citations.ts  fetch-study-publications.ts  fhir-vs-ftp-final-analysis.md  package-lock.json  package.json  patch-variable-summaries.ts  prototype-ftp-parser.ts  readme.md  utils.ts  (+9 more)
(+3300 files in other folders)
