[project]
name = "ncpi-concept-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "fastapi",
    "filelock",
    "httpx",
    "mcp[cli]",
    "pydantic-ai-slim[anthropic]",
    "pydantic-evals",
    "python-dotenv",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
concept-search = "concept_search.cli:main"
concept-search-api = "concept_search.api:main"
