[project]
name = "ncpi-concept-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "fastapi",
    "filelock",
    "httpx",
    "mcp[cli]",
    "numpy",
    "pydantic-ai-slim[anthropic]",
    "pydantic-evals",
    "python-dotenv",
    "sentence-transformers",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cpu/torch"]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.10.0%2Bcpu-cp313-cp313-manylinux_2_28_x86_64.whl", marker = "sys_platform == 'linux'" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "PLW",  # pylint warnings
]

[tool.ruff.format]
quote-style = "double"
